# kinematics

example_kinematics/: CMakeLists.txt  package.xml  package.xml~  prova.cpp
example_kinematics/launch/: display.launch  robot.rviz
example_kinematics/robots/: exemple.urdf
